crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__transaction_subscription__transaction_subscription.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/transaction_subscription.rs
expression: item
---
{
  "data": {
    "transactions": {
      "digest": "[digest]",
      "sender": {
        "address": "[address]"
      },
      "gasInput": {
        "gasBudget": "5000000000"
      },
      "effects": {
        "status": "SUCCESS",
        "balanceChanges": {
          "nodes": [
            {
              "amount": "1000",
              "coinType": {
                "repr": "[pkg]::sui::SUI"
              },
              "owner": {
                "address": "[address]"
              }
            },
            {
              "amount": "-1998880",
              "coinType": {
                "repr": "[pkg]::sui::SUI"
              },
              "owner": {
                "address": "[address]"
              }
            }
          ]
        }
      }
    }
  }
}
